--- a/labo_2/opdracht_3.html
+++ b/labo_2/opdracht_3.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Web Development I</title>
 </head>
+
 <body>
+<h1>Opdracht 3</h1>
+<p>
 <p>Dit is een eenvoudige paragraaf</p>
 <a href="www.example.com">dit is een link naar www.example.com</a>
 <p>Dit is een eenvoudige paragraaf <a href="www.example.com">met een hyperlink</a> en nog
     wat meer tekst</p>
+</p>
 </body>
+
 </html>
