--- a/labo_2/opdracht_4.html
+++ b/labo_2/opdracht_4.html
@@ -22,8 +22,13 @@
 </p>
 
 <p>
-    Wil je toch extra spaties? Gebruik &nbsp;&nbsp;&nbsp;tussen woorden.<br>
-    En voor een nieuwe regel gebruik je &lt;br&gt;.
+    Extra spaties tussen woorden: Salam Alaikum &nbsp;&nbsp;&nbsp;bratuxa, kak ty?
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    Je leest dit bericht 5 lege regels verder.
 </p>
 </body>
 </html>
