--- a/labo_2/opdracht_3.html
+++ b/labo_2/opdracht_3.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Opdracht 3</h1>
 <p>Dit is een eenvoudige paragraaf</p>
-<a href="www.example.com">dit is een link naar www.example.com</a>
+<a href="www.example.com">Dit is een link naar www.example.com</a>
 <p>Dit is een eenvoudige paragraaf <a href="www.example.com">met een hyperlink</a> en nog
     wat meer tekst</p>
 </body>
