--- a/labo_2/opdracht_4.html
+++ b/labo_2/opdracht_4.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Opdracht 4</h1>
 <p>
-    Dit   is    een   zin   met   veel   spaties  maar in de browser   zie   je   dat   niet.
+    Dit   is    een   zin   met   veel   spaties  maar in de browser   zie   je   dat   niet. (werkt niet)
 </p>
 
 <p>
@@ -18,17 +18,17 @@
     lege regels
 
 
-    tussen woorden.
+    tussen woorden. (werkt niet)
 </p>
 
 <p>
-    Extra spaties tussen woorden: Salam Alaikum &nbsp;&nbsp;&nbsp;bratuxa, kak ty?
+    Extra spaties tussen woorden: Salam &nbsp;Alaikum &nbsp;&nbsp;&nbsp;bratuxa, kak&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ty? (werkt wel)
     <br>
     <br>
     <br>
     <br>
     <br>
-    Je leest dit bericht 5 lege regels verder.
+    Je leest dit bericht 5 lege regels verder. (werkt wel)
 </p>
 </body>
 </html>
