--- a/labo_2/opdracht_6.html
+++ b/labo_2/opdracht_6.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Opdracht 6</h1>
 <p>
-    • (4x2 + 2( -> er zijn 2 haakjes open, niet correct genest
-    • (4x2( +2 -> hier hetzelfde, niet correct genest
-    • (4x(2+2) -> de laatste 2 zijn gesloten maar de eerste niet, niet correct genest
+    • (4x2 + 2( -> er zijn 2 haakjes open, niet correct genest <br>
+    • (4x2( +2 -> hier hetzelfde, niet correct genest <br>
+    • (4x(2+2) -> de laatste 2 zijn gesloten maar de eerste niet, niet correct genest <br>
     • (4x(2+2() -> de laatste 2 zijn gesloten maar de eerste 2 niet, niet correct genest
 </p>
 </body>
