--- a/labo_2/opdracht_8.html
+++ b/labo_2/opdracht_8.html
@@ -8,8 +8,9 @@
 <body>
 <h1>Opdracht 8</h1>
 <p>
-    Hier komt het antwoord en/of de uitwerking van opdracht 8.
+    Ja, je moet een spatie zetten voor te anders word het “linkte” ipv “link te” omdat hetgeen tussen de tags word niet getoond op de site en wordt ook niet gezien als een spatie.
+    <br>
+    Span opent en word gesloten binnen strong. De tags mogen niet verkeerd genest worden. Het moet span open daarna strong open en dan strong sluiten en dan span sluiten.
 </p>
 </body>
-
 </html>
