--- a/labo_2/opdracht_9.html
+++ b/labo_2/opdracht_9.html
@@ -17,7 +17,7 @@
 
 <p>
     <a href="http://www.htmldog.com/examples/">
-        <img src="images/htmldog.png" alt="HTML Dog">
+        <img src="images/badge1.gif" alt="HTML Dog">
     </a>
 </p>
 
