--- a/labo_2/opdracht_10.html
+++ b/labo_2/opdracht_10.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Opdracht 10</h1>
-<p>De onderstaande oefening is juist:</p>
+<p>De onderstaande oefening is juist (gecorigeerd):</p>
 <br>
 <ul>
     <li>een</li>
@@ -18,19 +18,6 @@
             <li>joris</li>
         </ol>
     </li>
-    <li>vier</li>
-</ul>
-
-<p> De onderstaande oefening is fout:</p>
-<br>
-<ul>
-    <li>een</li>
-    <li>twee</li>
-    <ol>
-        <li>jan</li>
-        <li>piet</li>
-        <li>joris</li>
-    </ol>
     <li>vier</li>
 </ul>
 
