--- a/labo_2/opdracht_12.html
+++ b/labo_2/opdracht_12.html
@@ -8,10 +8,8 @@
 <body>
 <h1>Opdracht 12</h1>
 <p>
-    De webapplicatie bewaart de vergeleken toestellen in de local storage.
-    <br>
-    Kortom: cookies = klein, meestal voor log in en tracking
-    <br>
+    De webapplicatie bewaart de vergeleken toestellen in de local storage. <br>
+    Kortom: cookies = klein, meestal voor log in en tracking <br>
     local storage = groter, lokaal, tijdelijke app data zoals vergelijken tv’s
 
 </p>
