--- a/labo_3/index.html
+++ b/labo_3/index.html
@@ -11,25 +11,9 @@
     <li><strong>Volledige naam:</strong> Alex Jansen</li>
     <li><strong>Adres:</strong> Zonnestraat 12, 9000 Gent</li>
     <li><strong>Telefoonnummer:</strong> 0478 55 22 90</li>
-    <li><strong>E-mailadres:</strong> alex.jansen@gmail.com</li>
+    <li><strong>E-mailadres:</strong> alex.jansen@example.com</li>
     <li><strong>Foto:</strong><br>
-        <img src="https://via.placeholder.com/150" alt="Foto van Alex Jansen">
-    </li>
-</ul>
-
-<h2>Hobby’s</h2>
-<ul>
-    <li>
-        <strong>Fotografie:</strong> Ik hou van landschapsfotografie en experimenteer graag met licht en schaduw.
-        <a href="https://www.nationalgeographic.com/photography/">Bezoek website</a>
-    </li>
-    <li>
-        <strong>Gamen:</strong> Ik speel graag avontuurlijke en strategische spellen.
-        <a href="https://store.steampowered.com/">Bezoek website</a>
-    </li>
-    <li>
-        <strong>Koken:</strong> Ik experimenteer graag met nieuwe recepten uit verschillende culturen.
-        <a href="https://www.ah.be/allerhande/recepten">Bezoek website</a>
+        <img src="images/alex jansen.jpg" alt="Foto van Alex Jansen" width="150">
     </li>
 </ul>
 
@@ -37,23 +21,16 @@
 <ul>
     <li>
         <strong>Favoriete band:</strong> Imagine Dragons<br>
-        <img src="https://upload.wikimedia.org/wikipedia/en/3/3d/Imagine_Dragons_Evolve_art.jpg" alt="Imagine Dragons albumcover" width="100"><br>
-        <a href="https://www.imaginedragonsmusic.com/">Website</a>
+        <img src="images/imagine dragons.jpg" alt="Imagine Dragons albumcover" width="100"><br>
     </li>
     <li>
         <strong>Favoriete film:</strong> Inception<br>
-        <img src="https://upload.wikimedia.org/wikipedia/en/7/7f/Inception_ver3.jpg" alt="Inception film poster" width="100"><br>
-        <a href="https://www.imdb.com/title/tt1375666/">Meer info</a>
+        <img src="images/inception.jpg" alt="Inception film poster" width="100"><br>
     </li>
     <li>
         <strong>Favoriete muziekgenre:</strong> Alternatieve rock<br>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Electric_guitar_icon.png" alt="Gitaar icoon" width="100"><br>
-        <a href="https://nl.wikipedia.org/wiki/Alternatieve_rock">Lees meer</a>
+        <img src="images/gitaar.jpg" alt="Gitaar icoon" width="100"><br>
     </li>
 </ul>
-
-<footer>
-    <p>© 2025 Alex Jansen — Persoonlijke homepage opdracht</p>
-</footer>
 </body>
 </html>
