--- a/labo_3/index.html
+++ b/labo_3/index.html
@@ -11,9 +11,25 @@
     <li><strong>Volledige naam:</strong> Alex Jansen</li>
     <li><strong>Adres:</strong> Zonnestraat 12, 9000 Gent</li>
     <li><strong>Telefoonnummer:</strong> 0478 55 22 90</li>
-    <li><strong>E-mailadres:</strong> alex.jansen@example.com</li>
+    <li><strong>E-mailadres:</strong> alex.jansen@gmail.com</li>
     <li><strong>Foto:</strong><br>
         <img src="images/alex jansen.jpg" alt="Foto van Alex Jansen" width="150">
+    </li>
+</ul>
+
+<h2>Hobby’s</h2>
+<ul>
+    <li>
+        <strong>Fotografie:</strong> Ik hou van landschapsfotografie en experimenteer graag met licht en schaduw.
+        <a href="https://www.nationalgeographic.com/photography/">Bezoek website</a>
+    </li>
+    <li>
+        <strong>Gamen:</strong> Ik speel graag avontuurlijke en strategische spellen.
+        <a href="https://store.steampowered.com/">Bezoek website</a>
+    </li>
+    <li>
+        <strong>Koken:</strong> Ik experimenteer graag met nieuwe recepten uit verschillende culturen.
+        <a href="https://www.ah.be/allerhande/recepten">Bezoek website</a>
     </li>
 </ul>
 
