--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li>
         <h2>Labo 3</h2>
         <ol>
-            <li><a href="labo_3/index.html">Homepage</a></li>
+            <li><a href="labo_3/homepage.html">Homepage</a></li>
             <li><a href="labo_3/opdracht_2.html">Opdracht 2</a></li>
             <li><a href="labo_3/opdracht_3.html">Opdracht 3</a></li>
             <li><a href="labo_3/opdracht_4.html">Opdracht 4</a></li>
