--- a/labo_3/opleidingsaanbod.html
+++ b/labo_3/opleidingsaanbod.html
@@ -5,12 +5,12 @@
 </head>
 <body>
 <header>
-    <h3>Hogeschool VIVES</h3>
+    <a>Hogeschool VIVES</a>
 </header>
 
 <article>
     <section>
-        <h4>De Hogeschool VIVES is actief in zes studiegebieden:</h4>
+        <a>De Hogeschool VIVES is actief in zes studiegebieden:</a>
         <ol>
             <li>Biotechniek</li>
             <li>Gezondheidszorg</li>
@@ -21,7 +21,7 @@
         </ol>
     </section>
     <section>
-        <h4>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma's behalen:</h4>
+        <a>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele <br> bachelor diploma's behalen:</a>
         <ul>
             <li>Toegepaste informatica
                 <ol>
@@ -47,6 +47,7 @@
                     <li>Eventmanagement</li>
                     <li>Financie- en verzekeringswezen</li>
                     <li>Marketing - specialisatie Retail- & storemanagement</li>
+                    <br>
                 </ol>
             </li>
             <li>Officemanagement
