--- a/labo_3/opleidingsaanbod.html
+++ b/labo_3/opleidingsaanbod.html
@@ -7,7 +7,7 @@
 <header>
     <a>Hogeschool VIVES</a>
 </header>
-
+<br>
 <article>
     <section>
         <a>De Hogeschool VIVES is actief in zes studiegebieden:</a>
@@ -61,9 +61,7 @@
     </section>
     <section>
         <a>Definitie van Ohm</a>
-        <blockquote>
-        <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd <br> met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met weerstand van 1 Ohm <br> zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</p>
-            <blockquote>
+            <blockquote> <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd <br> met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met weerstand van 1 Ohm <br> zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</p> </blockquote>
     </section>
     <footer>
         <p>&copy 2024</p>
