--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
         <ol>
             <li><a href="labo_3/homepage.html">Homepage</a></li>
             <li><a href="labo_3/opleidingsaanbod.html">Opleidingsaanbod</a></li>
-            <li><a href="labo_3/opdracht_3.html">Opdracht 3</a></li>
-            <li><a href="labo_3/opdracht_4.html">Opdracht 4</a></li>
-            <li><a href="labo_3/opdracht_5.html">Opdracht 5</a></li>
+            <li><a href="labo_3/contactinformatie.html">Contactinformatie</a></li>
         </ol>
     </li>
 </ul>
