--- a/labo_3/opleidingsaanbod.html
+++ b/labo_3/opleidingsaanbod.html
@@ -60,7 +60,7 @@
         </ul>
     </section>
     <section>
-        <p>Definitie van Ohm</p>>
+        <p>Definitie van Ohm</p>
             <blockquote> <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd <br> met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met weerstand van 1 Ohm <br> zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</p> </blockquote>
     </section>
     <footer>
