--- a/labo_3/contactinformatie.html
+++ b/labo_3/contactinformatie.html
@@ -4,6 +4,8 @@
     <title>Hoe kan je ons bereiken?</title>
 </head>
 <body>
+<h1>Hoe kan je ons bereiken?</h1>
+
 <table border="1px">
     <thead>
 
