--- a/labo_3/homepage.html
+++ b/labo_3/homepage.html
@@ -48,5 +48,40 @@
         <img src="images/gitaar.jpg" alt="Gitaar icoon" width="100"><br>
     </li>
 </ul>
+
+</table>
+<h2>Prognose</h2>
+<table>
+    <tr>
+        <th></th>
+        <th>Problem Solving</th>
+        <th>Fundamentals of Programming</th>
+        <th>Excel</th>
+    </tr>
+    <tr>
+        <th>Adam</th>
+        <td>19/20</td>
+        <td>18/20</td>
+        <td>17/20</td>
+    </tr>
+    <tr>
+        <th>Anuar</th>
+        <td>17/20</td>
+        <td>19/20</td>
+        <td>19/20</td>
+    </tr>
+    <tr>
+        <th>Sadjed</th>
+        <td>14/20</td>
+        <td>16/20</td>
+        <td>13/20</td>
+    </tr>
+    <tr>
+        <th>Amir</th>
+        <td>18/20</td>
+        <td>15/20</td>
+        <td>12/20</td>
+    </tr>
+</table>
 </body>
 </html>
