Update homepage & prognose.html

--- a/labo_3/homepage & prognose.html
+++ b/labo_3/homepage & prognose.html
@@ -52,12 +52,14 @@
 </table>
 <h2>Prognose</h2>
 <table>
+    <thead>
     <tr>
-        <th></th>
-        <th>Problem Solving</th>
+        <th colspan="2">Problem Solving</th>
         <th>Fundamentals of Programming</th>
         <th>Excel</th>
     </tr>
+    </thead>
+
     <tr>
         <th>Adam</th>
         <td>19/20</td>
