Update homepage & prognose.html

--- a/labo_3/homepage & prognose.html
+++ b/labo_3/homepage & prognose.html
@@ -55,7 +55,7 @@
     <thead>
     <tr>
         <th colspan="2">Problem Solving</th>
-        <th>Fundamentals of Programming</th>
+        <th>English</th>
         <th>Excel</th>
     </tr>
     </thead>
