Update homepage & prognose.html

--- a/labo_3/homepage & prognose.html
+++ b/labo_3/homepage & prognose.html
@@ -12,7 +12,8 @@
     <li><strong>Adres:</strong> Zonnestraat 12, 9000 Gent</li>
     <li><strong>Telefoonnummer:</strong> 0478 55 22 90</li>
     <li><strong>E-mailadres:</strong> alex.jansen@gmail.com</li>
-    <li><strong>Foto:</strong><br>
+    <li><strong>Foto:</strong>
+        <br>
         <img src="images/alex jansen.jpg" alt="Foto van Alex Jansen" width="150">
     </li>
 </ul>
@@ -39,10 +40,12 @@
         <strong>Favoriete band:</strong> Imagine Dragons<br>
         <img src="images/imagine dragons.jpg" alt="Imagine Dragons albumcover" width="100"><br>
     </li>
+    <br>
     <li>
         <strong>Favoriete film:</strong> Inception<br>
         <img src="images/inception.jpg" alt="Inception film poster" width="100"><br>
     </li>
+    <br>
     <li>
         <strong>Favoriete muziekgenre:</strong> Alternatieve rock<br>
         <img src="images/gitaar.jpg" alt="Gitaar icoon" width="100"><br>
