--- a/labo_3/homepage/index.html
+++ b/labo_3/homepage/index.html
@@ -14,7 +14,7 @@
     <li><strong>E-mailadres:</strong> alex.jansen@gmail.com</li>
     <li><strong>Foto:</strong>
         <br>
-        <img src="images/alex jansen.jpg" alt="Foto van Alex Jansen" width="150">
+        <img src="images/alex%20jansen.jpg" alt="Foto van Alex Jansen" width="150">
     </li>
 </ul>
 
@@ -38,7 +38,7 @@
 <ul>
     <li>
         <strong>Favoriete band:</strong> Imagine Dragons<br>
-        <img src="images/imagine dragons.jpg" alt="Imagine Dragons albumcover" width="100"><br>
+        <img src="images/imagine%20dragons.jpg" alt="Imagine Dragons albumcover" width="100"><br>
     </li>
     <br>
     <li>
