--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li>
         <h2>Labo 3</h2>
         <ol>
-            <li><a href="labo_3/homepage%20&%20prognose.html">Homepage & Prognose</a></li>
+            <li><a href="labo_3/homepage/index.html">Homepage & Prognose</a></li>
             <li><a href="labo_3/opleidingsaanbod/index.html">Opleidingsaanbod</a></li>
             <li><a href="labo_3/contactinformatie/index.html">Contactinformatie</a></li>
         </ol>
