--- a/labo_3/homepage/index.html
+++ b/labo_3/homepage/index.html
@@ -38,21 +38,19 @@
 <ul>
     <li>
         <strong>Favoriete band:</strong> Imagine Dragons<br>
-        <img src="images/imagine%20dragons.jpg" alt="Imagine Dragons albumcover" width="100"><br>
+        <img src="images/imagine%20dragons.jpg" alt="Imagine Dragons albumcover" width="100"><br><br>
     </li>
-    <br>
     <li>
         <strong>Favoriete film:</strong> Inception<br>
-        <img src="images/inception.jpg" alt="Inception film poster" width="100"><br>
+        <img src="images/inception.jpg" alt="Inception film poster" width="100"><br><br>
     </li>
-    <br>
     <li>
         <strong>Favoriete muziekgenre:</strong> Alternatieve rock<br>
         <img src="images/gitaar.jpg" alt="Gitaar icoon" width="100"><br>
     </li>
 </ul>
 
-</table>
+<table>
 <h2>Prognose</h2>
 <table border="1px">
     <thead>
