--- a/labo_3/opleidingsaanbod/index.html
+++ b/labo_3/opleidingsaanbod/index.html
@@ -8,8 +8,7 @@
     <a>Hogeschool VIVES</a>
 </header>
 <br>
-<article>
-    <section>
+    <div>
         <a>De Hogeschool VIVES is actief in zes studiegebieden:</a>
         <ol>
             <li>Biotechniek</li>
@@ -19,8 +18,8 @@
             <li>Onderwijs</li>
             <li>Sociaal-agogisch werk</li>
         </ol>
-    </section>
-    <section>
+    </div>
+    <div>
         <a>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele <br> bachelor diploma's behalen:</a>
         <ul>
             <li>Toegepaste informatica
@@ -46,8 +45,7 @@
                     <li>Business Management & Entrepreneurship</li>
                     <li>Eventmanagement</li>
                     <li>Financie- en verzekeringswezen</li>
-                    <li>Marketing - specialisatie Retail- & storemanagement</li>
-                    <br>
+                    <li>Marketing - specialisatie Retail- & storemanagement<br></li>
                 </ol>
             </li>
             <li>Officemanagement
@@ -58,11 +56,9 @@
                 </ol>
             </li>
         </ul>
-    </section>
-    <section>
+    </div>
         <p>Definitie van Ohm</p>
             <blockquote> <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd <br> met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met weerstand van 1 Ohm <br> zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</p> </blockquote>
-    </section>
     <footer>
-        <p>&copy 2024</p>
+        <p>&copy; 2024</p>
         </footer>
