--- a/labo_3/opleidingsaanbod/index.html
+++ b/labo_3/opleidingsaanbod/index.html
@@ -57,8 +57,9 @@
             </li>
         </ul>
     </div>
-        <p>Definitie van Ohm</p>
-            <blockquote> <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd <br> met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met weerstand van 1 Ohm <br> zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</p> </blockquote>
+<dl>
+        <dt>Definitie van Ohm</dt>
+            <dd>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd <br> met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met weerstand van 1 Ohm <br> zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</dd>
     <footer>
         <p>&copy; 2024</p>
         </footer>
