--- a/labo_3/homepage/index.html
+++ b/labo_3/homepage/index.html
@@ -18,7 +18,7 @@
     </li>
 </ul>
 
-<h2>Hobby’s</h2>
+<h2>Hobby's</h2>
 <ul>
     <li>
         <strong>Fotografie:</strong> Ik hou van landschapsfotografie en experimenteer graag met licht en schaduw.
