--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             <li><a href="labo_3/contactinformatie/index.html">Contactinformatie</a></li>
         </ol>
     </li>
+
+    <li>
+        <h2>Labo 4</h2>
+        <ol>
+            <li><a href="labo_4/index.html">Hoofdpagina (hobby's & likes)</a></li>
+        </ol>
+    </li>
 </ul>
 </body>
 
