--- a/labo_4/index.html
+++ b/labo_4/index.html
@@ -7,7 +7,7 @@
 <h1>Welkom op mijn persoonlijke homepage</h1>
 
 <h2>Over mezelf</h2>
-<p>Ik ben <strong>Adam Baïssoultanov</strong>, Ik ben een student Toegepaste Informatica aan Vives Kortrijk.
+<p>Ik ben een student Toegepaste Informatica aan Vives Kortrijk. <br>
     Op deze website kan je meer ontdekken over mezelf, mijn hobby’s en mijn favoriete dingen.</p>
 
 <h3>Persoonlijke informatie:</h3>
@@ -25,8 +25,6 @@
 </ul>
 
 <p><em>Let op:</em> Deze absolute links werken enkel lokaal!</p>
-
-<hr>
 
 <h3>Na test aanpassen naar relatieve paden:</h3>
 <ul>
