--- a/labo_4/index.html
+++ b/labo_4/index.html
@@ -12,12 +12,15 @@
 
 <h3>Persoonlijke informatie:</h3>
 
-    <ul>
-        <li><strong>Volledige naam:</strong> Adam Baïssoultanov</li>
-        <li><strong>Adres:</strong> Driekerkenstraat 63, 8501 Bissegem</li>
-        <li><strong>Telefoonnummer:</strong> <a href="tel:0484358039">0484358039</a></li>
-        <li><strong>E-mailadres:</strong> <a href="mailto:adam.baissoultanov@icloud.com">adam.baissoultanov@icloud.com</a></li>
-    </ul>
+<ul>
+    <li><strong>Volledige naam:</strong> Adam Baïssoultanov</li>
+    <li><strong>Adres:</strong> Driekerkenstraat 63, 8501 Bissegem</li>
+    <li><strong>Telefoonnummer:</strong> <a href="tel:0484358039">0484358039</a></li>
+    <li><strong>E-mailadres:</strong> <a href="mailto:adam.baissoultanov@icloud.com">adam.baissoultanov@icloud.com</a></li>
+    <li><strong>Foto:</strong><br>
+        <img src="images/AdamFoto.JPEG" alt="Foto van Adam Baïssoultanov" width="150">
+    </li>
+</ul>
 
 <ul>
     <li><a href="http://localhost/labo_4/hobbys.html">Mijn hobby’s (absolute link)</a></li>
