--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
         </ol>
     </li>
 
+    <li>
+        <h2>Labo 5</h2>
+        <ol>
+            <li><a href="labo_5/index.html">Hoofdingen en paragrafen</a></li>
+        </ol>
+    </li>
+
 </ul>
 </body>
 
